@@ -72,17 +72,16 @@
 #define sliceop 325
 #define exprlist 326
 #define testlist 327
-#define dictmaker 328
-#define dictorsetmaker 329
-#define classdef 330
-#define arglist 331
-#define argument 332
-#define list_iter 333
-#define list_for 334
-#define list_if 335
-#define comp_iter 336
-#define comp_for 337
-#define comp_if 338
-#define testlist1 339
-#define encoding_decl 340
-#define yield_expr 341
+#define dictorsetmaker 328
+#define classdef 329
+#define arglist 330
+#define argument 331
+#define list_iter 332
+#define list_for 333
+#define list_if 334
+#define comp_iter 335
+#define comp_for 336
+#define comp_if 337
+#define testlist1 338
+#define encoding_decl 339
+#define yield_expr 340
