@@ -1526,335 +1526,311 @@ static state states_71[3] = {
 static arc arcs_72_0[1] = {
     {28, 1},
 };
-static arc arcs_72_1[1] = {
+static arc arcs_72_1[4] = {
     {23, 2},
+    {157, 3},
+    {29, 4},
+    {0, 1},
 };
 static arc arcs_72_2[1] = {
-    {28, 3},
+    {28, 5},
 };
-static arc arcs_72_3[2] = {
-    {29, 4},
+static arc arcs_72_3[1] = {
     {0, 3},
 };
 static arc arcs_72_4[2] = {
-    {28, 1},
-    {0, 4},
-};
-static state states_72[5] = {
-    {1, arcs_72_0},
-    {1, arcs_72_1},
-    {1, arcs_72_2},
-    {2, arcs_72_3},
-    {2, arcs_72_4},
-};
-static arc arcs_73_0[1] = {
-    {28, 1},
-};
-static arc arcs_73_1[4] = {
-    {23, 2},
-    {157, 3},
-    {29, 4},
-    {0, 1},
-};
-static arc arcs_73_2[1] = {
-    {28, 5},
-};
-static arc arcs_73_3[1] = {
-    {0, 3},
-};
-static arc arcs_73_4[2] = {
     {28, 6},
     {0, 4},
 };
-static arc arcs_73_5[3] = {
+static arc arcs_72_5[3] = {
     {157, 3},
     {29, 7},
     {0, 5},
 };
-static arc arcs_73_6[2] = {
+static arc arcs_72_6[2] = {
     {29, 4},
     {0, 6},
 };
-static arc arcs_73_7[2] = {
+static arc arcs_72_7[2] = {
     {28, 8},
     {0, 7},
 };
-static arc arcs_73_8[1] = {
+static arc arcs_72_8[1] = {
     {23, 9},
 };
-static arc arcs_73_9[1] = {
+static arc arcs_72_9[1] = {
     {28, 10},
 };
-static arc arcs_73_10[2] = {
+static arc arcs_72_10[2] = {
     {29, 7},
     {0, 10},
 };
-static state states_73[11] = {
-    {1, arcs_73_0},
-    {4, arcs_73_1},
-    {1, arcs_73_2},
-    {1, arcs_73_3},
-    {2, arcs_73_4},
-    {3, arcs_73_5},
-    {2, arcs_73_6},
-    {2, arcs_73_7},
-    {1, arcs_73_8},
-    {1, arcs_73_9},
-    {2, arcs_73_10},
+static state states_72[11] = {
+    {1, arcs_72_0},
+    {4, arcs_72_1},
+    {1, arcs_72_2},
+    {1, arcs_72_3},
+    {2, arcs_72_4},
+    {3, arcs_72_5},
+    {2, arcs_72_6},
+    {2, arcs_72_7},
+    {1, arcs_72_8},
+    {1, arcs_72_9},
+    {2, arcs_72_10},
 };
-static arc arcs_74_0[1] = {
-    {162, 1},
+static arc arcs_73_0[1] = {
+    {161, 1},
 };
-static arc arcs_74_1[1] = {
+static arc arcs_73_1[1] = {
     {21, 2},
 };
-static arc arcs_74_2[2] = {
+static arc arcs_73_2[2] = {
     {13, 3},
     {23, 4},
 };
-static arc arcs_74_3[2] = {
+static arc arcs_73_3[2] = {
     {9, 5},
     {15, 6},
 };
-static arc arcs_74_4[1] = {
+static arc arcs_73_4[1] = {
     {24, 7},
 };
-static arc arcs_74_5[1] = {
+static arc arcs_73_5[1] = {
     {15, 6},
 };
-static arc arcs_74_6[1] = {
+static arc arcs_73_6[1] = {
     {23, 4},
 };
-static arc arcs_74_7[1] = {
+static arc arcs_73_7[1] = {
     {0, 7},
 };
-static state states_74[8] = {
-    {1, arcs_74_0},
-    {1, arcs_74_1},
-    {2, arcs_74_2},
-    {2, arcs_74_3},
-    {1, arcs_74_4},
-    {1, arcs_74_5},
-    {1, arcs_74_6},
-    {1, arcs_74_7},
+static state states_73[8] = {
+    {1, arcs_73_0},
+    {1, arcs_73_1},
+    {2, arcs_73_2},
+    {2, arcs_73_3},
+    {1, arcs_73_4},
+    {1, arcs_73_5},
+    {1, arcs_73_6},
+    {1, arcs_73_7},
 };
-static arc arcs_75_0[3] = {
-    {163, 1},
+static arc arcs_74_0[3] = {
+    {162, 1},
     {30, 2},
     {31, 3},
 };
-static arc arcs_75_1[2] = {
+static arc arcs_74_1[2] = {
     {29, 4},
     {0, 1},
 };
-static arc arcs_75_2[1] = {
+static arc arcs_74_2[1] = {
     {28, 5},
 };
-static arc arcs_75_3[1] = {
+static arc arcs_74_3[1] = {
     {28, 6},
 };
-static arc arcs_75_4[4] = {
-    {163, 1},
+static arc arcs_74_4[4] = {
+    {162, 1},
     {30, 2},
     {31, 3},
     {0, 4},
 };
-static arc arcs_75_5[2] = {
+static arc arcs_74_5[2] = {
     {29, 7},
     {0, 5},
 };
-static arc arcs_75_6[1] = {
+static arc arcs_74_6[1] = {
     {0, 6},
 };
-static arc arcs_75_7[2] = {
-    {163, 5},
+static arc arcs_74_7[2] = {
+    {162, 5},
     {31, 3},
 };
-static state states_75[8] = {
-    {3, arcs_75_0},
-    {2, arcs_75_1},
-    {1, arcs_75_2},
-    {1, arcs_75_3},
-    {4, arcs_75_4},
-    {2, arcs_75_5},
-    {1, arcs_75_6},
-    {2, arcs_75_7},
+static state states_74[8] = {
+    {3, arcs_74_0},
+    {2, arcs_74_1},
+    {1, arcs_74_2},
+    {1, arcs_74_3},
+    {4, arcs_74_4},
+    {2, arcs_74_5},
+    {1, arcs_74_6},
+    {2, arcs_74_7},
 };
-static arc arcs_76_0[1] = {
+static arc arcs_75_0[1] = {
     {28, 1},
 };
-static arc arcs_76_1[3] = {
+static arc arcs_75_1[3] = {
     {157, 2},
     {27, 3},
     {0, 1},
 };
-static arc arcs_76_2[1] = {
+static arc arcs_75_2[1] = {
     {0, 2},
 };
-static arc arcs_76_3[1] = {
+static arc arcs_75_3[1] = {
     {28, 2},
 };
-static state states_76[4] = {
-    {1, arcs_76_0},
-    {3, arcs_76_1},
-    {1, arcs_76_2},
-    {1, arcs_76_3},
+static state states_75[4] = {
+    {1, arcs_75_0},
+    {3, arcs_75_1},
+    {1, arcs_75_2},
+    {1, arcs_75_3},
 };
-static arc arcs_77_0[2] = {
+static arc arcs_76_0[2] = {
     {156, 1},
-    {165, 1},
+    {164, 1},
+};
+static arc arcs_76_1[1] = {
+    {0, 1},
+};
+static state states_76[2] = {
+    {2, arcs_76_0},
+    {1, arcs_76_1},
+};
+static arc arcs_77_0[1] = {
+    {96, 1},
 };
 static arc arcs_77_1[1] = {
-    {0, 1},
-};
-static state states_77[2] = {
-    {2, arcs_77_0},
-    {1, arcs_77_1},
-};
-static arc arcs_78_0[1] = {
-    {96, 1},
-};
-static arc arcs_78_1[1] = {
     {61, 2},
 };
-static arc arcs_78_2[1] = {
+static arc arcs_77_2[1] = {
     {85, 3},
 };
-static arc arcs_78_3[1] = {
+static arc arcs_77_3[1] = {
     {105, 4},
 };
-static arc arcs_78_4[2] = {
-    {164, 5},
+static arc arcs_77_4[2] = {
+    {163, 5},
     {0, 4},
 };
-static arc arcs_78_5[1] = {
+static arc arcs_77_5[1] = {
     {0, 5},
 };
-static state states_78[6] = {
+static state states_77[6] = {
+    {1, arcs_77_0},
+    {1, arcs_77_1},
+    {1, arcs_77_2},
+    {1, arcs_77_3},
+    {2, arcs_77_4},
+    {1, arcs_77_5},
+};
+static arc arcs_78_0[1] = {
+    {92, 1},
+};
+static arc arcs_78_1[1] = {
+    {106, 2},
+};
+static arc arcs_78_2[2] = {
+    {163, 3},
+    {0, 2},
+};
+static arc arcs_78_3[1] = {
+    {0, 3},
+};
+static state states_78[4] = {
     {1, arcs_78_0},
     {1, arcs_78_1},
-    {1, arcs_78_2},
+    {2, arcs_78_2},
     {1, arcs_78_3},
-    {2, arcs_78_4},
-    {1, arcs_78_5},
 };
-static arc arcs_79_0[1] = {
-    {92, 1},
+static arc arcs_79_0[2] = {
+    {157, 1},
+    {166, 1},
 };
 static arc arcs_79_1[1] = {
-    {106, 2},
-};
-static arc arcs_79_2[2] = {
-    {164, 3},
-    {0, 2},
-};
-static arc arcs_79_3[1] = {
-    {0, 3},
-};
-static state states_79[4] = {
-    {1, arcs_79_0},
-    {1, arcs_79_1},
-    {2, arcs_79_2},
-    {1, arcs_79_3},
-};
-static arc arcs_80_0[2] = {
-    {157, 1},
-    {167, 1},
-};
-static arc arcs_80_1[1] = {
     {0, 1},
 };
-static state states_80[2] = {
-    {2, arcs_80_0},
-    {1, arcs_80_1},
+static state states_79[2] = {
+    {2, arcs_79_0},
+    {1, arcs_79_1},
 };
-static arc arcs_81_0[1] = {
+static arc arcs_80_0[1] = {
     {96, 1},
 };
-static arc arcs_81_1[1] = {
+static arc arcs_80_1[1] = {
     {61, 2},
 };
-static arc arcs_81_2[1] = {
+static arc arcs_80_2[1] = {
     {85, 3},
 };
-static arc arcs_81_3[1] = {
+static arc arcs_80_3[1] = {
     {107, 4},
 };
-static arc arcs_81_4[2] = {
-    {166, 5},
+static arc arcs_80_4[2] = {
+    {165, 5},
     {0, 4},
 };
-static arc arcs_81_5[1] = {
+static arc arcs_80_5[1] = {
     {0, 5},
 };
-static state states_81[6] = {
-    {1, arcs_81_0},
-    {1, arcs_81_1},
-    {1, arcs_81_2},
-    {1, arcs_81_3},
-    {2, arcs_81_4},
-    {1, arcs_81_5},
+static state states_80[6] = {
+    {1, arcs_80_0},
+    {1, arcs_80_1},
+    {1, arcs_80_2},
+    {1, arcs_80_3},
+    {2, arcs_80_4},
+    {1, arcs_80_5},
 };
-static arc arcs_82_0[1] = {
+static arc arcs_81_0[1] = {
     {92, 1},
 };
-static arc arcs_82_1[1] = {
+static arc arcs_81_1[1] = {
     {106, 2},
 };
-static arc arcs_82_2[2] = {
-    {166, 3},
+static arc arcs_81_2[2] = {
+    {165, 3},
     {0, 2},
 };
-static arc arcs_82_3[1] = {
+static arc arcs_81_3[1] = {
     {0, 3},
 };
-static state states_82[4] = {
-    {1, arcs_82_0},
-    {1, arcs_82_1},
-    {2, arcs_82_2},
-    {1, arcs_82_3},
+static state states_81[4] = {
+    {1, arcs_81_0},
+    {1, arcs_81_1},
+    {2, arcs_81_2},
+    {1, arcs_81_3},
 };
-static arc arcs_83_0[1] = {
+static arc arcs_82_0[1] = {
     {28, 1},
 };
-static arc arcs_83_1[2] = {
+static arc arcs_82_1[2] = {
     {29, 0},
+    {0, 1},
+};
+static state states_82[2] = {
+    {1, arcs_82_0},
+    {2, arcs_82_1},
+};
+static arc arcs_83_0[1] = {
+    {21, 1},
+};
+static arc arcs_83_1[1] = {
     {0, 1},
 };
 static state states_83[2] = {
     {1, arcs_83_0},
-    {2, arcs_83_1},
+    {1, arcs_83_1},
 };
 static arc arcs_84_0[1] = {
-    {21, 1},
+    {168, 1},
 };
-static arc arcs_84_1[1] = {
-    {0, 1},
-};
-static state states_84[2] = {
-    {1, arcs_84_0},
-    {1, arcs_84_1},
-};
-static arc arcs_85_0[1] = {
-    {169, 1},
-};
-static arc arcs_85_1[2] = {
+static arc arcs_84_1[2] = {
     {9, 2},
     {0, 1},
 };
-static arc arcs_85_2[1] = {
+static arc arcs_84_2[1] = {
     {0, 2},
 };
-static state states_85[3] = {
-    {1, arcs_85_0},
-    {2, arcs_85_1},
-    {1, arcs_85_2},
+static state states_84[3] = {
+    {1, arcs_84_0},
+    {2, arcs_84_1},
+    {1, arcs_84_2},
 };
-static dfa dfas[86] = {
+static dfa dfas[85] = {
     {256, "single_input", 0, 3, states_0,
-     "\004\050\060\000\000\000\000\124\360\024\114\220\023\040\010\000\200\041\044\015\004\002"},
+     "\004\050\060\000\000\000\000\124\360\024\114\220\023\040\010\000\200\041\044\015\002\001"},
     {257, "file_input", 0, 2, states_1,
-     "\204\050\060\000\000\000\000\124\360\024\114\220\023\040\010\000\200\041\044\015\004\002"},
+     "\204\050\060\000\000\000\000\124\360\024\114\220\023\040\010\000\200\041\044\015\002\001"},
     {258, "eval_input", 0, 3, states_2,
      "\000\040\040\000\000\000\000\000\000\000\000\000\000\040\010\000\200\041\044\015\000\000"},
     {259, "decorator", 0, 7, states_3,
@@ -1874,11 +1850,11 @@ static dfa dfas[86] = {
     {266, "fplist", 0, 3, states_10,
      "\000\040\040\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000"},
     {267, "stmt", 0, 2, states_11,
-     "\000\050\060\000\000\000\000\124\360\024\114\220\023\040\010\000\200\041\044\015\004\002"},
+     "\000\050\060\000\000\000\000\124\360\024\114\220\023\040\010\000\200\041\044\015\002\001"},
     {268, "simple_stmt", 0, 4, states_12,
-     "\000\040\040\000\000\000\000\124\360\024\114\000\000\040\010\000\200\041\044\015\000\002"},
+     "\000\040\040\000\000\000\000\124\360\024\114\000\000\040\010\000\200\041\044\015\000\001"},
     {269, "small_stmt", 0, 2, states_13,
-     "\000\040\040\000\000\000\000\124\360\024\114\000\000\040\010\000\200\041\044\015\000\002"},
+     "\000\040\040\000\000\000\000\124\360\024\114\000\000\040\010\000\200\041\044\015\000\001"},
     {270, "expr_stmt", 0, 6, states_14,
      "\000\040\040\000\000\000\000\000\000\000\000\000\000\040\010\000\200\041\044\015\000\000"},
     {271, "augassign", 0, 2, states_15,
@@ -1890,7 +1866,7 @@ static dfa dfas[86] = {
     {274, "pass_stmt", 0, 2, states_18,
      "\000\000\000\000\000\000\000\100\000\000\000\000\000\000\000\000\000\000\000\000\000\000"},
     {275, "flow_stmt", 0, 2, states_19,
-     "\000\000\000\000\000\000\000\000\360\000\000\000\000\000\000\000\000\000\000\000\000\002"},
+     "\000\000\000\000\000\000\000\000\360\000\000\000\000\000\000\000\000\000\000\000\000\001"},
     {276, "break_stmt", 0, 2, states_20,
      "\000\000\000\000\000\000\000\000\020\000\000\000\000\000\000\000\000\000\000\000\000\000"},
     {277, "continue_stmt", 0, 2, states_21,
@@ -1898,7 +1874,7 @@ static dfa dfas[86] = {
     {278, "return_stmt", 0, 3, states_22,
      "\000\000\000\000\000\000\000\000\100\000\000\000\000\000\000\000\000\000\000\000\000\000"},
     {279, "yield_stmt", 0, 2, states_23,
-     "\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\002"},
+     "\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\001"},
     {280, "raise_stmt", 0, 7, states_24,
      "\000\000\000\000\000\000\000\000\200\000\000\000\000\000\000\000\000\000\000\000\000\000"},
     {281, "import_stmt", 0, 2, states_25,
@@ -1924,7 +1900,7 @@ static dfa dfas[86] = {
     {291, "assert_stmt", 0, 5, states_35,
      "\000\000\000\000\000\000\000\000\000\000\100\000\000\000\000\000\000\000\000\000\000\000"},
     {292, "compound_stmt", 0, 2, states_36,
-     "\000\010\020\000\000\000\000\000\000\000\000\220\023\000\000\000\000\000\000\000\004\000"},
+     "\000\010\020\000\000\000\000\000\000\000\000\220\023\000\000\000\000\000\000\000\002\000"},
     {293, "if_stmt", 0, 8, states_37,
      "\000\000\000\000\000\000\000\000\000\000\000\020\000\000\000\000\000\000\000\000\000\000"},
     {294, "while_stmt", 0, 8, states_38,
@@ -1940,7 +1916,7 @@ static dfa dfas[86] = {
     {299, "except_clause", 0, 5, states_43,
      "\000\000\000\000\000\000\000\000\000\000\000\000\100\000\000\000\000\000\000\000\000\000"},
     {300, "suite", 0, 5, states_44,
-     "\004\040\040\000\000\000\000\124\360\024\114\000\000\040\010\000\200\041\044\015\000\002"},
+     "\004\040\040\000\000\000\000\124\360\024\114\000\000\040\010\000\200\041\044\015\000\001"},
     {301, "testlist_safe", 0, 5, states_45,
      "\000\040\040\000\000\000\000\000\000\000\000\000\000\040\010\000\200\041\044\015\000\000"},
     {302, "old_test", 0, 2, states_46,
@@ -1995,36 +1971,34 @@ static dfa dfas[86] = {
      "\000\040\040\000\000\000\000\000\000\000\000\000\000\000\000\000\200\041\044\015\000\000"},
     {327, "testlist", 0, 3, states_71,
      "\000\040\040\000\000\000\000\000\000\000\000\000\000\040\010\000\200\041\044\015\000\000"},
-    {328, "dictmaker", 0, 5, states_72,
+    {328, "dictorsetmaker", 0, 11, states_72,
      "\000\040\040\000\000\000\000\000\000\000\000\000\000\040\010\000\200\041\044\015\000\000"},
-    {329, "dictorsetmaker", 0, 11, states_73,
-     "\000\040\040\000\000\000\000\000\000\000\000\000\000\040\010\000\200\041\044\015\000\000"},
-    {330, "classdef", 0, 8, states_74,
-     "\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\004\000"},
-    {331, "arglist", 0, 8, states_75,
+    {329, "classdef", 0, 8, states_73,
+     "\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\002\000"},
+    {330, "arglist", 0, 8, states_74,
      "\000\040\040\300\000\000\000\000\000\000\000\000\000\040\010\000\200\041\044\015\000\000"},
-    {332, "argument", 0, 4, states_76,
+    {331, "argument", 0, 4, states_75,
      "\000\040\040\000\000\000\000\000\000\000\000\000\000\040\010\000\200\041\044\015\000\000"},
-    {333, "list_iter", 0, 2, states_77,
+    {332, "list_iter", 0, 2, states_76,
      "\000\000\000\000\000\000\000\000\000\000\000\020\001\000\000\000\000\000\000\000\000\000"},
-    {334, "list_for", 0, 6, states_78,
+    {333, "list_for", 0, 6, states_77,
      "\000\000\000\000\000\000\000\000\000\000\000\000\001\000\000\000\000\000\000\000\000\000"},
-    {335, "list_if", 0, 4, states_79,
+    {334, "list_if", 0, 4, states_78,
      "\000\000\000\000\000\000\000\000\000\000\000\020\000\000\000\000\000\000\000\000\000\000"},
-    {336, "comp_iter", 0, 2, states_80,
+    {335, "comp_iter", 0, 2, states_79,
      "\000\000\000\000\000\000\000\000\000\000\000\020\001\000\000\000\000\000\000\000\000\000"},
-    {337, "comp_for", 0, 6, states_81,
+    {336, "comp_for", 0, 6, states_80,
      "\000\000\000\000\000\000\000\000\000\000\000\000\001\000\000\000\000\000\000\000\000\000"},
-    {338, "comp_if", 0, 4, states_82,
+    {337, "comp_if", 0, 4, states_81,
      "\000\000\000\000\000\000\000\000\000\000\000\020\000\000\000\000\000\000\000\000\000\000"},
-    {339, "testlist1", 0, 2, states_83,
+    {338, "testlist1", 0, 2, states_82,
      "\000\040\040\000\000\000\000\000\000\000\000\000\000\040\010\000\200\041\044\015\000\000"},
-    {340, "encoding_decl", 0, 2, states_84,
+    {339, "encoding_decl", 0, 2, states_83,
      "\000\000\040\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000"},
-    {341, "yield_expr", 0, 3, states_85,
-     "\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\002"},
+    {340, "yield_expr", 0, 3, states_84,
+     "\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\001"},
 };
-static label labels[170] = {
+static label labels[169] = {
     {0, "EMPTY"},
     {256, 0},
     {4, 0},
@@ -2039,11 +2013,11 @@ static label labels[170] = {
     {50, 0},
     {288, 0},
     {7, 0},
-    {331, 0},
+    {330, 0},
     {8, 0},
     {260, 0},
     {261, 0},
-    {330, 0},
+    {329, 0},
     {262, 0},
     {1, "def"},
     {1, 0},
@@ -2070,7 +2044,7 @@ static label labels[170] = {
     {290, 0},
     {291, 0},
     {271, 0},
-    {341, 0},
+    {340, 0},
     {37, 0},
     {38, 0},
     {39, 0},
@@ -2175,30 +2149,29 @@ static label labels[170] = {
     {319, 0},
     {10, 0},
     {26, 0},
-    {329, 0},
+    {328, 0},
     {27, 0},
     {25, 0},
-    {339, 0},
+    {338, 0},
     {2, 0},
     {3, 0},
-    {334, 0},
-    {337, 0},
+    {333, 0},
+    {336, 0},
     {323, 0},
     {324, 0},
     {325, 0},
-    {328, 0},
     {1, "class"},
+    {331, 0},
     {332, 0},
-    {333, 0},
+    {334, 0},
     {335, 0},
-    {336, 0},
-    {338, 0},
-    {340, 0},
+    {337, 0},
+    {339, 0},
     {1, "yield"},
 };
 grammar _PyParser_Grammar = {
-    86,
+    85,
     dfas,
-    {170, labels},
+    {169, labels},
     256
 };
