@@ -9,6 +9,8 @@ What's New in Python 2.7.2?
 Core and Builtins
 -----------------
 
+- Issue #10674: Remove unused 'dictmaker' rule from grammar.
+
 - Issue #10596: Fix float.__mod__ to have the same behaviour as
   float.__divmod__ with respect to signed zeros.  -4.0 % 4.0 should be
   0.0, not -0.0.
